# ctrader-backtest

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  BROKER_API_INTEGRATION.md  BROKER_DATA_INTEGRATION.md  BROKER_INDEX.md  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  COMPLETION_SUMMARY.md  CTRADER_API_SETUP.md  FILE_INDEX.md  GITHUB_README.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING_COMPLETE.md  MT5_COMPARISON_GUIDE.md  MT5_COMPARISON_RESULTS.md  MT5_COMPARISON_STRATEGY.md  MT5_DATA_REFERENCE.md  MT5_VALIDATION_INDEX.md  Makefile  PHASE_8_PROGRESS.md  README.md  README_VALIDATION.md  SESSION_SUMMARY.md  STRATEGY_DIRECTION_ANALYSIS.md  STRATEGY_GUIDELINES.md  STRATEGY_IMPLEMENTATION_CHECKLIST.md  STRATEGY_IMPROVEMENT_REPORT.md  TESTS_BF_READY.md  UI_QUICK_REFERENCE.md  V5_IMPLEMENTATION_SUMMARY.md  V6_FINAL_PARAMETERS.md  V6_IMPLEMENTATION_SUMMARY.md  WORK_COMPLETE_SUMMARY.md  ai_agent.py  analyze_carry_hedge.py  analyze_covariance.py  analyze_fx_carry.py  (+41 more)
.claude/: SKILLS.md  settings.json  settings.local.json
api/: config.py  main.py
bridge/: mt5_bridge.py
cache/: metatrader5_000000.json
dashboard/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: MQL5_REFERENCE.md  NEW_FEATURES.md
example/: CycleSurfer_EA.mq5  Nasdaq_up.mq5  fill_up.mq5  fill_up_gemini.mq5  fill_up_optimized.mq5  fill_up_sql_logger.mq5  fill_up_verbose.mq5  fill_up_with_up_while_up.mq5  grid_multi_symbol.mq5  grid_open_upwards_while_going_upwards.mq5  open_upwards_while_going_downwards.mq5
examples/: cross_currency_rates_example.cpp  currency_conversion_example.cpp
external_review/review 1/ctrader-backtest-main/validation/: ALGORITHM_COMPARISON.md  AUTOMATION_README.md  BROKER_RESULTS_COMPARISON.md  CMakeLists.txt  FILL_UP_TEST_PLAN.md  FINAL_COMPARISON_ANALYSIS.md  FINAL_RESULTS_SUMMARY.md  README.md  RERUN_MT5_INSTRUCTIONS.md  SWAP_DOUBLE_COUNT_BUG_ANALYSIS.md  SimplePriceLevelBreakout.ini  TEST_A_INSTRUCTIONS.md  TEST_INSTRUCTIONS.md  TRIPLE_SWAP_IMPLEMENTATION.md  UNIT_TEST_RESULTS.md  analyze_all_tests.py  analyze_swap.py  analyze_test_c.py  analyze_test_f.py  check_mt5_status.py  compare_backtest_results.py  compare_test_a.py  example_integration.cpp  extract_mt5_report.py  integration_test.cpp  run_all_tests.py  run_broker_backtest.bat  run_broker_test.bat  run_fixed_broker_test.bat  run_mt5_test.py  run_mt5_tester.py  run_step1_mt5_export.py  run_step3_our_backtest.py  run_test_a_full.py  run_test_direct.sh  run_tests.bat  run_validation.bat  temp_run.bat  test_a_our_backtest.cpp  test_currency_converter.cpp  (+8 more)
external_review/review 1/ctrader-backtest-main/validation/analysis/: complete_analysis.json
external_review/review 1/ctrader-backtest-main/validation/configs/tester_ini/: test_f.ini
external_review/review 1/ctrader-backtest-main/validation/micro_tests/: test_a_sl_tp_order.mq5  test_e_swap_timing.mq5
external_review/review 1/ctrader-backtest-main/validation/mt5/: test_d_summary.json  test_e_summary.json
gui_qt6/: CMakeLists.txt  INSTALL.md
gui_qt6/resources/: resources.qrc
gui_qt6/resources/styles/: dark.qss
gui_qt6/scripts/: mt5_bridge.py
gui_qt6/src/: backtestworker.cpp  backtestworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mt5bridge.cpp  mt5bridge.h
gui_qt6/src/widgets/: equitychart.cpp  equitychart.h  instrumentselector.cpp  instrumentselector.h  parametergrid.cpp  parametergrid.h  resultstable.cpp  resultstable.h
include/: backtest_engine.h  backtest_log.h  backtester_accurate.h  config_parser.h  correlation_analyzer.h  ctrader_connector.h  fast_tick_parser.h  fill_down_oscillation.h  fill_up_kapitza.h  fill_up_oscillation.h  fill_up_oscillation_nas100.h  fill_up_strategy.h  fill_up_strategy_v10.h  fill_up_strategy_v11.h  fill_up_strategy_v12.h  fill_up_strategy_v2.h  fill_up_strategy_v3.h  fill_up_strategy_v4.h  fill_up_strategy_v5.h  fill_up_strategy_v7.h  fill_up_strategy_v8.h  fill_up_strategy_v9.h  gpu_compute.cpp  gpu_compute.h  grid_improved.h  grid_optimized_strategy.h  kill_switch.h  live_trading_bridge.h  metatrader_connector.h  monte_carlo.h  mql5_compat.h  mql5_extended.h  mql5_trade_context.cpp  mql5_trade_context.h  mt5_statistics.h  mt5_validated_constants.h  multi_symbol_engine.h  optimization_engine.h  portfolio_backtester.h  position_validator.h  (+58 more)
mt5/: AdaptiveRegimeGrid_EA.mq5  Antifragile_NAS100.mq5  Antifragile_Universal.mq5  CombinedJu_Diagnostic.mq5  CombinedJu_EA.mq5  CombinedJu_ForcedEntry.mq5  CrossHedgeGrid_UKOUSD_GASC.mq5  FillUpAdaptive.mq5  FillUpAdaptive_Calibrate.mq5  FillUpAdaptive_v2.mq5  FillUpAdaptive_v3.mq5  FillUpAdaptive_v4.mq5  FillUpAdaptive_v5.mq5  FillUp_Adaptive12_Force.mq5  FillUp_CombinedJu.mq5  GridSimple.mq5  (+21 more)
validation/: BUILDING_BLOCKS.md  CMakeLists.txt  COMBINATION_RESULTS.md  COMPREHENSIVE_TEST_RESULTS.md  CURRENCY_RATE_MANAGER_TESTS.md  DOMAIN_INVESTIGATION_REPORT.md  FILL_UP_STATUS.md  FINAL_STRATEGY_RECOMMENDATIONS.md  FIXES_APPLIED.md  IMPROVEMENT_RESULTS.md  INVESTIGATION_SUMMARY.md  NAS100_STRATEGY_SUMMARY.md  NAS100_VOLATILITY_SIZING_REPORT.md  RECOMMENDED_V6_STRATEGY.md  STRATEGY_COMPARISON.md  V5_EXIT_OPTIMIZATION_RESULTS.md  V6_COMBINED_TEST_INSTRUCTIONS.md  V6_TEST_SUMMARY.md  VANDERPOL_ANALYSIS.md  XAUUSD_MT5_SPECS.txt  XAUUSD_SWAP_RATES.txt  analyze_test_e.py  broker_run_output.txt  compile_broker.bat  dashboard_cli.cpp  extract_swap_total.py  find_crashes.cpp  mt5_comparison_cpp_results.txt  retrieve_results.py  run_combinations.sh  run_test.bat  run_unit_tests.py  test_7_strategies.cpp  test_adaptive_control.cpp  test_adaptive_control_quick.cpp  test_adaptive_lookback.cpp  test_adaptive_regime_grid.cpp  test_adaptive_regime_grid_sweep.cpp  test_adaptive_single.cpp  test_adaptive_sizing.cpp  (+345 more)
validation/Broker/: GetMarginRate.txt  XAUUSD_SETTINGS.txt
validation/NAS100/: symbol_params.json
validation/analysis/: mt5_validated_config.json
validation/micro_tests/: test_b_tick_synthesis.mq5  test_c_slippage.mq5  test_d_spread_widening.mq5  test_f_margin_calc.mq5
validation/mt5/: test_b_summary.json  test_c_summary.json  test_f_summary.json
(+355 files in other folders)
